# hslife

./: life.cabal  stack.yaml
app/: Main.hs
src/Logic/: Life.hs
