name:                life
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chiaksi/hslife#readme
license:             BSD3
license-file:        LICENSE
author:              Rose
maintainer:          rose@lain.org.uk
copyright:           2017 Rose 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Logic.Life
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1.1
  default-language:    Haskell2010

executable life-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , life
                     , sdl2 >= 2.2.0
                     , array >= 0.5.1.1
                     , time 
  default-language:    Haskell2010

test-suite life-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , life
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chiakis/hslife
